tests/uncompilable/sync_accessor.stderr
error: Accessors are not supported for sync structs
 --> tests/uncompilable/sync_accessor.rs:5:14
  |
5 |     #[fieldx(accessor)]
  |              ^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/uncompilable/sync_accessor.rs:7:2
  |
7 | }
  |  ^ consider adding a `main` function to `$DIR/tests/uncompilable/sync_accessor.rs`
